syntax = "proto3";

option go_package = "go-shard/pkg/grpc";

message GetShardRequest {
  string tenant = 1;
  string customer_id = 2;
}

message GetShardResponse {
  string shard_id = 1;
}

service Shard {
  rpc Get(GetShardRequest) returns (GetShardResponse){}
}